--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+  <style type="text/css">
+	 .tab { margin-left: 40px; }
+	</style>
 </head>
 
 <body>
@@ -20,7 +23,7 @@
       <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
     </div>
 	<h2>Latest Mars News</h2>
-    <h4><strong>{{ mission_to_mars.title }}</strong></h4>
+    <font size="4"><strong>{{ mission_to_mars.title }}</strong></font>
 	<p>{{ mission_to_mars.preview }}</p>
 
 	<div class="container-xxl">
@@ -33,7 +36,7 @@
 			</div>
 			<div class="col-lg-4 float-right">
 				<br>
-				<h5><strong>Mars Facts</strong></h5>
+				<h6><strong>Mars Facts:<p class="tab">Mars - Earth Comparison</p></strong></h6>
 				<table class="table table-striped" border="2.0" style="width:100%">
 					<thead>
 						<tr>
